atualizando .gitignore para ignorar arquivos gerados automaticamente pela IDE e pelo sistema.

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,39 @@
-### IntelliJ IDEA ###
+# Compiled class files
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
+# Eclipse
 .project
-.settings
-.springBeans
-.sts4-cache
+.classpath
+.csettings/
+.settings/
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+target/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
+# VS Code
 .vscode/
 
-### Mac OS ###
+# Mac
 .DS_Store
+
+# Windows
+Thumbs.db
